[project]
authors = [{email = "admin@example.com", name = "admin"}]
description = "FastAPI project generated using minimal-fastapi-postgres-template."
name = "app"
version = "0.1.19"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0,<2",
    "asyncpg>=0.30.0,<1",
    "bcrypt>=4.3.0,<5",
    "fastapi>=0.115.10,<1",
    "pydantic[email]>=2.10.6,<3",
    "pydantic-settings>=2.8.1,<3",
    "pyjwt>=2.10.1,<3",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy[asyncio]>=2.0.38,<3",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.6.12,<8",
    "freezegun>=1.5.1,<2",
    "greenlet>=3.1.1,<4",
    "httpx>=0.28.1,<1",
    "mypy>=1.15.0,<2",
    "pre-commit>=4.0.1,<5",
    "pytest>=8.3.4,<9",
    "pytest-asyncio>=0.26.0,<1",
    "pytest-cov>=6.0.0,<7",
    "pytest-xdist>=3.6.1,<4",
    "ruff>=0.9.9,<1",
    "uvicorn[standard]>=0.34.0,<1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pytest.ini_options]
addopts = "-vv -n auto --cov --cov-report xml --cov-report term-missing --cov-fail-under=92"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.coverage.run]
concurrency = ["greenlet"]
omit = ["app/tests/*"]
source = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["E501"]
select = ["E", "F", "I", "PL", "UP", "W"]